--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/neon-adapter": "^1.9.1",
     "@fileforge/react-print": "^0.1.150",
     "@hookform/resolvers": "^3.9.1",
-    "@neondatabase/serverless": "latest",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -43,6 +44,7 @@
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,6 +56,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-chartjs-2": "^5.3.0",
@@ -67,9 +70,10 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.25.42"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
