--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.4.9",
